--- a/csound/Scrims_qt.html
+++ b/csound/Scrims_qt.html
@@ -985,9 +985,9 @@ endin
         function csoundMessage(text) {
             var Log_cell = document.getElementById('console');
             Log_cell.value += text;
-            console.log(text);
             Log_cell.scrollTop = Log_cell.scrollHeight;
          }
+         console.log = csoundMessage;
         function onWindowResize( event ) {
             var container = document.getElementById('webgl_cell');
             windowHalfX = container.clientWidth / 2;
@@ -1318,13 +1318,5 @@ endin
             return slider;
         };
         </script>
-    <script>
-    function handleMessage(message) {
-        console.log(message);
-        var messages_textarea = document.getElementById("console");
-        var existing = messages_textarea.value;
-        messages_textarea.value = existing + message.data;
-        messages_textarea.scrollTop = messages_textarea.scrollHeight;
-    }
     </body>
 </html>
