Loads final element in args as Csound or HTML file (#27).

--- a/csound/Scrims_qt.html
+++ b/csound/Scrims_qt.html
@@ -44,7 +44,7 @@
             <col width=150px>
             <tr style="color:gold;font-size:18px;">
             <!-- Copyright (C) 2016 by Michael Gogins -->
-            <td style="font-weight:bold;">Scrims, for csound.node</td>
+            <td style="font-weight:bold;">Scrims</td>
             <td style="color:gold;text-align:right;">Michael Gogins</td>
             <tr>
                 <td colspan="2" style="color:gold;text-align:left">Click "Play"; adjust "Master effects" group "gk_MasterOutput_level" slider.</td>
