Updating Csound for Android app (#10).

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/Csound6AndroidExamples/Gogins/Message.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/Csound6AndroidExamples/Gogins/Message.html
@@ -111,7 +111,7 @@
 <body style="background-color:CadetBlue">
     </script>
     <h1>Message from Another Planet, version 3</h1>
-    <h3>Adapted for WebAssembly by Michael Gogins, from "Message from Another Planet" by Jacob Joaquin</h3>
+    <h3>Adapted for Csound with HTML5 by Michael Gogins, from "Message from Another Planet" by Jacob Joaquin</h3>
     <form id='persist'>
     <table>
     <col width="2*">
