Trying CodeMirror in WebView as code editor (#80).

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/codemirror_editor.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/codemirror_editor.html
@@ -12,5 +12,11 @@ var codemirror_editor = CodeMirror(document.body, {
   theme: "cobalt",
   height: "auto",
 });
+var setCodemirrorText = function(text) {
+    editor.setValue(text);
+};
+var getCodemirrorText = function() {
+    var text = editor.getValue();
+}
 </script>
 </body>
