Dequeue score events in callback (#81).

--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Message.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Message.html
@@ -221,7 +221,7 @@ gk_master_level chnget      "gk_master_level"
     aoutright   =           a1 * (sqrt(1-krand))
     gasendL     =           gasendL + aoutleft
     gasendR     =           gasendR + aoutright
-                //printks     "Spreader: gk2_spread: %12.4f  kcps: %12.4f  kamp: %12.4f\n", 1, gk2_spread, kcps, kamp
+                prints      "Spreader: %9.4f %9.4f %9.4f %9.4f %9.4f %9.4f %9.4f\n", p1, p2, p3, p4, p5, p6, p7
                 endin
 
 gk_reverb_delay init .89
