--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Scrims.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Scrims.html
@@ -36,7 +36,12 @@
             messages_textarea.value = existing + message;
             messages_textarea.scrollTop = messages_textarea.scrollHeight;   
         };
-        // These are the ways Csound can be instantiated in the JavaScript context:
+    </script>
+    </head>
+    <body style="background:black;">
+    <script>
+        // These are the ways Csound can be instantiated in the JavaScript context.
+        // This code should run in the HTML body.
         if (typeof csound !== 'undefined') {
             // (1) Injected (e.g. by Csound for Android or CsoundQt).
             csound.message("\nCsound already exists in the JavaScript context: version " + csound.getVersion());
@@ -54,16 +59,14 @@
                 var script = document.createElement('script');
                 script.src = "/csound.js";
                 script.type = 'text/javascript';
-                head.appendChild(script);        
+                head.appendChild(script);
                 var moduleDidLoad = function() {
                     csound.message("\nCsound for WebAssembly has been loaded; Csound functions may now be called.");
                 }
             }
         }
     </script>
-    </head>
-    <body style="background:black;">
-         <div id = 'webgl_cell' class='canvas' style="width:98vw;height:98vh;cursor:none;"/>
+    <div id = 'webgl_cell' class='canvas' style="width:98vw;height:98vh;cursor:none;"/>
         <table id = 'statistics' style="table-layout:fixed;position:absolute;left:1vw;color:#eee;top:1vw;font-family:Monaco, sans-serif;font-size:8pt;cursor:none;">
             <col width=300px>
             <col width=150px>
