--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/embedded_editor.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/embedded_editor.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <script src="file:///android_asset/ace/ace.js"></script>
 </head>
 <body>
-<div id="editor" style="width:100vw;height:100vw;"></div>
+<div id="editor" style="width:100vw;height:100vh;"></div>
 
 <script>
     var editor = ace.edit("editor");
     editor.resize(true);
     editor.session.setMode("ace/mode/csound_document");
+    editor.setOption("useSoftTabs", "true");
+    editor.setOption("tabSize", "4");
+    editor.setOption("wrap", "true");
+    editor.setOption("selectionStyle", "text");
+    editor.setOption("autoScrollEditorIntoView", "true");
     editor.setTheme("ace/theme/cobalt");
 
-var setEmbeddedEditorText = function(mode) {
-    try {
-        var text = csoundApp.getCsoundText();
-        editor.session.setMode(mode);
-        editor.setValue(text);
-        editor.clearSelection();
-        return 'setEmbeddedEditorText';
-    } catch (e) {
-        return e.description;
+    var setEmbeddedEditorText = function(mode) {
+        try {
+            var text = csoundApp.getCsoundText();
+            editor.session.setMode(mode);
+            editor.setValue(text);
+            editor.clearSelection();
+            return 'setEmbeddedEditorText';
+        } catch (e) {
+            return e.description;
+        }
+    };
+
+    var getEmbeddedEditorText = function() {
+        try {
+            var text = editor.getValue();
+            csoundApp.setCsoundText(text);
+            return 'getEmbeddedEditorText ' + text;
+        } catch (e) {
+            return e.description;
+        }
     }
-};
-var getEmbeddedEditorText = function() {
-    try {
-        var text = editor.getValue();
-        csoundApp.setCsoundText(text);
-        return 'getEmbeddedEditorText ' + text;
-    } catch (e) {
-        return e.description;
+
+    var getEmbeddedEditorTextAndRun = function() {
+        try {
+            var text = editor.getValue();
+            csoundApp.setCsoundText(text);
+            return 'getEmbeddedEditorTextAndRun' + text;
+        } catch (e) {
+            return e.description;
+        }
     }
-}
-var getEmbeddedEditorTextAndRun = function() {
-    try {
-        var text = editor.getValue();
-        csoundApp.setCsoundText(text);
-        return 'getEmbeddedEditorTextAndRun' + text;
-    } catch (e) {
-        return e.description;
+
+    var getEmbeddedEditorTextAndSave = function() {
+        try {
+            var text = codemirror_editor.getDoc().getValue();
+            csoundApp.setCsoundText(text);
+            return 'getEmbeddedEditorTextAndSave ' + text;
+        } catch (e) {
+            return e.description;
+        }
     }
-}
-var getEmbeddedEditorTextAndSave = function() {
-    try {
-        var text = codemirror_editor.getDoc().getValue();
-        csoundApp.setCsoundText(text);
-        return 'getEmbeddedEditorTextAndSave ' + text;
-    } catch (e) {
-        return e.description;
-    }
-}
 </script>
 </body>
 </html>
