--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Scrims.html
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/assets/examples/Gogins/Scrims.html
@@ -40,8 +40,7 @@
     </head>
     <body style="background:black;">
     <script>
-        // These are the ways Csound can be instantiated in the JavaScript context.
-        // This code should run in the HTML body.
+        // These are the ways Csound can be instantiated in a JavaScript context.
         if (typeof csound !== 'undefined') {
             // (1) Injected (e.g. by Csound for Android or CsoundQt).
             csound.message("\nCsound already exists in the JavaScript context: version " + csound.getVersion());
@@ -53,15 +52,19 @@
                 csound.message('\ncsound.node has been loaded: version ' + csound.getVersion() + '\n');
             // (3) By csound.js in WebAssembly.
             } catch (err) {
-                console.warn(err.message);
-                console.info("Trying to load Csound for WebAssembly...");
-                var head = document.getElementsByTagName('head')[0];
-                var script = document.createElement('script');
-                script.src = "/csound.js";
-                script.type = 'text/javascript';
-                head.appendChild(script);
-                var moduleDidLoad = function() {
-                    csound.message("\nCsound for WebAssembly has been loaded; Csound functions may now be called.");
+                try {
+                    console.warn(err.message);
+                    console.info("Trying to load Csound for WebAssembly...");
+                    var head = document.getElementsByTagName('head')[0];
+                    var script = document.createElement('script');
+                    script.src = "/csound.js";
+                    script.type = 'text/javascript';
+                    head.appendChild(script);
+                    var moduleDidLoad = function() {
+                        csound.message("\nCsound for WebAssembly has been loaded; Csound functions may now be called.");
+                    }
+                } catch (err1) {
+                    console.warn(err1.message);
                 }
             }
         }
@@ -119,7 +122,7 @@ Composed By Michael Gogins
 <CsInstruments>
 
 sr = 48000
-ksmps = 200
+ksmps = 256
 nchnls = 2
 0dbfs = 1500000
 
