--- a/test-examples/csound.node/Scrims_node.html
+++ b/test-examples/csound.node/Scrims_node.html
@@ -81,53 +81,54 @@
             </tr>
         </table>
     <textarea class="code" id="orc" hidden rows=24 cols=80>
-
-sr = 88200
+<CsoundSynthesizer>
+<CsOptions>
+-odac -m195 --nodisplays
+</CsOptions>
+<CsInstruments>
+sr = 48000
 ksmps = 200
 nchnls = 2
-0dbfs = 1500000
+nchnls_i = 1
+0dbfs = 150000
 
-connect "FM_Clang", "outleft", "ReverbLeft", "inleft"
-connect "FM_Clang", "outright", "ReverbRight", "inright"
-connect "Blower", "outleft", "ReverbLeft", "inleft"
-connect "Blower", "outright", "ReverbRight", "inright"
-connect "Bower", "outleft", "ReverbLeft", "inleft"
-connect "Bower", "outright", "ReverbRight", "inright"
-connect "Buzzer", "outleft", "ReverbLeft", "inleft"
-connect "Buzzer", "outright", "ReverbRight", "inright"
-connect "Droner", "outleft", "ReverbLeft", "inleft"
-connect "Droner", "outright", "ReverbRight", "inright"
+connect "FM_Clang", "outleft", "ReverbSC", "inleft"
+connect "FM_Clang", "outright", "ReverbSC", "inright"
+connect "Blower", "outleft", "ReverbSC", "inleft"
+connect "Blower", "outright", "ReverbSC", "inright"
+connect "Bower", "outleft", "ReverbSC", "inleft"
+connect "Bower", "outright", "ReverbSC", "inright"
+connect "Buzzer", "outleft", "ReverbSC", "inleft"
+connect "Buzzer", "outright", "ReverbSC", "inright"
+connect "Droner", "outleft", "ReverbSC", "inleft"
+connect "Droner", "outright", "ReverbSC", "inright"
 connect "Harpsichord", "outleft", "Reverb2Left", "inleft"
 connect "Harpsichord", "outright", "Reverb2Right", "inright"
-connect "Phaser", "outleft", "ReverbLeft", "inleft"
-connect "Phaser", "outright", "ReverbRight", "inright"
+connect "Phaser", "outleft", "ReverbSC", "inleft"
+connect "Phaser", "outright", "ReverbSC", "inright"
 connect "PianoOut", "outleft", "MasterOutput", "inleft"
 connect "PianoOut", "outright", "MasterOutput", "inright"
 connect "PianoOut", "outleft", "Reverb2Left", "inleft"
 connect "PianoOut", "outright", "Reverb2Right", "inright"
-connect "Sweeper", "outleft", "ReverbLeft", "inleft"
-connect "Sweeper", "outright", "ReverbRight", "inright"
-connect "Shiner", "outleft", "ReverbLeft", "inleft"
-connect "Shiner", "outright", "ReverbRight", "inright"
-connect "YiString", "outleft", "ReverbLeft", "inleft"
-connect "YiString", "outright", "ReverbRight", "inright"
+connect "Sweeper", "outleft", "ReverbSC", "inleft"
+connect "Sweeper", "outright", "ReverbSC", "inright"
+connect "Shiner", "outleft", "ReverbSC", "inleft"
+connect "Shiner", "outright", "ReverbSC", "inright"
+connect "YiString", "outleft", "ReverbSC", "inleft"
+connect "YiString", "outright", "ReverbSC", "inright"
 connect "YiString", "chorusleft", "SolinaChorus", "inleft"
 connect "YiString", "chorusright", "SolinaChorus", "inright"
-connect "SolinaChorus", "outleft", "ReverbLeft", "inleft"
-connect "SolinaChorus", "outright", "ReverbRight", "inright"
-connect "ReverbLeft", "outleft", "MasterOutput", "inleft"
-connect "ReverbRight", "outright", "MasterOutput", "inright"
-connect "Reverb2Left", "outleft", "MasterOutput", "inleft"
-connect "Reverb2Right", "outright", "MasterOutput", "inright"
+connect "SolinaChorus", "outleft", "ReverbSC", "inleft"
+connect "SolinaChorus", "outright", "ReverbSC", "inright"
+connect "ReverbSC", "outleft", "MasterOutput", "inleft"
+connect "ReverbSC", "outright", "MasterOutput", "inright"
 
 alwayson "FM_Clang_controls"
 alwayson "Controls"
 alwayson "PianoOut"
 alwayson "SolinaChorus"
-alwayson "ReverbLeft"
-alwayson "ReverbRight"
-alwayson "Reverb2Left"
-alwayson "Reverb2Right"
+alwayson "ReverbSC"
+
 alwayson "FM_Clang_preset"
 alwayson "ParametricEQ"
 alwayson "MasterOutput"
@@ -238,7 +239,7 @@ aharp2 	 balance apluck, aharp
 asignal	= (apluck + aharp2) * iamplitude * aenvelope * gk_Harpsichord_level
 adeclick linsegr 0, iattack, 1, isustain, 1, irelease, 0
 asignal = asignal * adeclick
-aleft, aright pan2 asignal, ipan
+aleft, aright pan2 asignal, p7
 kgain = ampdb(gk_Harpsichord_level)
 outleta "outleft", aleft * kgain
 outleta "outright", aright * kgain
@@ -272,7 +273,7 @@ kvibamp = 0
 iminfreq = 30
 isine ftgenonce 0,0,65536,10,1
 aSig wgbow kamp,kfreq,gk_Bower_pressure,krat,kvibf,kvibamp,isine,iminfreq
-aleft, aright pan2 aSig / 7, ipan
+aleft, aright pan2 aSig / 7, p7
 adamping linseg 0, 0.03, 1, p3 - 0.1, 1, 0.07, 0
 aleft = adamping * aleft
 aright = adamping * aright
@@ -308,7 +309,7 @@ khertz = ihertz
 ifunction1 = isine
 ifunction2 = isine
 a1,a2 crosspm gk_Phaser_ratio1, gk_Phaser_ratio2, gk_Phaser_index1, gk_Phaser_index2, khertz, ifunction1, ifunction2
-aleft, aright pan2 a1+a2, ipan
+aleft, aright pan2 a1+a2, p7
 adamping linseg 0, 0.03, 1, p3 - 0.1, 1, 0.07, 0
 aleft = adamping * aleft * kenvelope
 aright = adamping * aright * kenvelope
@@ -345,7 +346,7 @@ ihertz = cpsmidinn(ikey)
 asignal = vco2(1, ihertz)
 asignal = moogladder(asignal, 6000, 0.1)
 asignal *= aenvelope
-aleft, aright pan2 asignal, ipan
+aleft, aright pan2 asignal, p7
 kgain = ampdb(gk_YiString_level)
 outleta "outleft", aleft * kgain * gk_YiString_reverb_send
 outleta "outright", aright * kgain * gk_YiString_reverb_send
@@ -396,7 +397,7 @@ isine ftgenonce 0, 0, 65536, 10, 1, 0, .02
 asignal poscil3 1, ihertz, isine
 asignal chebyshevpoly asignal, 0, k1, k2, k3, k4, k5, k6, k7, k8, k9, k10
 asignal = asignal * kenvelope * 10
-aleft, aright pan2 asignal, ipan
+aleft, aright pan2 asignal, p7
 adamping linseg 0, 0.03, 1, p3 - 0.1, 1, 0.07, 0
 aleft = adamping * aleft
 aright = adamping * aright
@@ -495,7 +496,7 @@ asignal = asignal * 3
 ;asignal vco2 kenvelope, ihertz, 12
 ;asignal poscil3 kenvelope, ihertz, giharmonics
 ;asignal distort asignal, gk_DistortFactor * .4, giwaveshaping
-aleft, aright pan2 asignal, ipan
+aleft, aright pan2 asignal, p7
 adamping linseg 0, 0.03, 1, p3 - 0.1, 1, 0.07, 0
 aleft = adamping * aleft
 aright = adamping * aright
@@ -524,7 +525,7 @@ kenvelope transeg 0.0, iattack / 2.0, 1.5, iamp / 2.0, iattack / 2.0, -1.5, iamp
 ihertz = cpsmidinn(ikey)
 gk_Harmonics = 1 * 20
 asignal vco2 kenvelope * 4, ihertz, 12
-aleft, aright pan2 asignal, ipan
+aleft, aright pan2 asignal, p7
 adamping linseg 0, 0.03, 1, p3 - 0.1, 1, 0.07, 0
 aleft = adamping * aleft
 aright = adamping * aright
@@ -625,7 +626,7 @@ gk_Piano_level init .25
 instr PianoOut
 kgain = ampdb(gk_Piano_level)
 giFluidsynth fluidEngine 0, 0
-giFluidSteinway fluidLoad "Piano Steinway Grand Model C (21,738KB).sf2", giFluidsynth, 1
+giFluidSteinway fluidLoad "Steinway_C.sf2", giFluidsynth, 1
 fluidProgramSelect giFluidsynth, 0, giFluidSteinway, 0, 1
 i_instrument = p1
 i_time = p2
@@ -702,47 +703,17 @@ endin
 gk_Reverb_Feedback init 0.975
 gk_Delay_Modulation init 0.875
 
-instr ReverbLeft
-aleft init 0
-azero init 0
+gk_Reverb_feedback init 0.975
+gi_Reverb_delay_modulation init 0.875
+gk_Reverb_frequency_cutoff init 15000
+instr ReverbSC
 aleft inleta "inleft"
-aleft, aright reverbsc aleft, azero, gk_Reverb_Feedback, 15000.
-outleta "outleft", aleft
-;;;;;;;;;;;;;;;;;;;;i
-prints "ReverbLeft  i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
-endin
-
-instr ReverbRight
-aleft init 0
-azero init 0
 aright inleta "inright"
-aleft, aright reverbsc azero, aright, gk_Reverb_Feedback, 15000.0
-outleta "outright", aright
-;;;;;;;;;;;;;;;;;;;;i
-prints "ReverbRight i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
-endin
-
-gk_Reverb2_Feedback init 0.975
-gk_Delay2_Modulation init 0.875
-
-instr Reverb2Left
-aleft init 0
-azero init 0
-aleft inleta "inleft"
-aleft, aright reverbsc aleft, azero, gk_Reverb2_Feedback, 15000.
+; aoutL, aoutR reverbsc ainL, ainR, kfblvl, kfco[, israte[, ipitchm[, iskip]]]
+aleft, aright  reverbsc aleft, aright, gk_Reverb_Feedback, gk_Reverb_frequency_cutoff, sr, gi_Reverb_delay_modulation
 outleta "outleft", aleft
-;;;;;;;;;;;;;;;;;;;;i
-prints "Reverb2Left i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
-endin
-
-instr Reverb2Right
-aleft init 0
-azero init 0
-aright inleta "inright"
-aleft, aright reverbsc azero, aright, gk_Reverb2_Feedback, 15000.0
 outleta "outright", aright
-;;;;;;;;;;;;;;;;;;;;i
-prints "Reverb2Righ i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
+prints "ReverbSC       i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f #%3d\\n", p1, p2, p3, p4, p5, p7, active(p1)
 endin
 
 gk_CenterHz init 200
@@ -785,7 +756,8 @@ Smin     strsub    Stim, 14, 16
 Ssec     strsub    Stim, 17, 19
 Sfilename sprintf  "Sevier-6-%s_%s_%02d_%s_%s_%s.wav", Syear, Smonth, iday, Shor, Smin, Ssec
 prints sprintf("Output filename: %s\n", Sfilename)
-; fout Sfilename, 16, aleft, aright
+iformat init -1
+fout Sfilename, iformat, aleft, aright
 ;;;;;;;;;;;;;;;;;;;;i
 prints "MasterOutpt i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
 endin
@@ -842,6 +814,12 @@ instr 999
 prints "StopPerform i %9.4f t %9.4f d %9.4f k %9.4f v %9.4f p %9.4f\n", p1, p2, p3, p4, p5, p7
 exitnow
 endin
+</CsInstruments>
+<CsScore>
+f 0 360
+</CsScore>
+</CsoundSynthesizer>
+
     </textarea>
     <script type="text/javascript">
         /**
@@ -1258,11 +1236,7 @@ endin
                 } catch(e) {
                     console.log(e);
                 }
-                csound.setOption('-m0');
-                //csound.setOption('-j3');
-                csound.setOption('--nodisplays');
-                csound.setOption('-odac');
-                csound.compileOrc(document.getElementById('orc').value);
+                csound.compileCsdText(document.getElementById('orc').value);
                 csound.readScore('f 0 360\n');
                 csound.start();
                 csound.perform();
@@ -1469,3 +1443,4 @@ endin
     }
     </body>
 </html>
+7
