--- a/silencio/js/ChordSpaceTest.html
+++ b/silencio/js/ChordSpaceTest.html
@@ -1,97 +1,22 @@
 <html>
-<script>
-(function() {
-  // STEP ONE: Convert all characters to lowercase to simplify testing
-  var agt=navigator.userAgent.toLowerCase();
-
-  // SETP TWO: Determine Browser Version
-  // Note: On IE5, these return 4, so use is_ie5up to detect IE5.
-  var is_major = parseInt(navigator.appVersion);
-  var is_minor = parseFloat(navigator.appVersion);
-
-  // Note: Opera and WebTV spoof Navigator.  We do strict client detection.
-  // If you want to allow spoofing, take out the tests for opera and webtv.
-  var is_nav  = ((agt.indexOf('mozilla')!=-1) && (agt.indexOf('spoofer')==-1)
-    && (agt.indexOf('compatible') == -1) && (agt.indexOf('opera')==-1)
-    && (agt.indexOf('webtv')==-1) && (agt.indexOf('hotjava')==-1));
-  var is_nav2 = (is_nav && (is_major == 2));
-  var is_nav3 = (is_nav && (is_major == 3));
-  var is_nav4 = (is_nav && (is_major == 4));
-  var is_nav4up = (is_nav && (is_major >= 4));
-  var is_navonly = (is_nav && ((agt.indexOf(";nav") != -1) ||
-    (agt.indexOf("; nav") != -1)) );
-  var is_nav6 = (is_nav && (is_major == 5));
-  var is_nav6up = (is_nav && (is_major >= 5));
-  var is_gecko = (agt.indexOf('gecko') != -1);
-
-  var is_ie     = ((agt.indexOf("msie") != -1) && (agt.indexOf("opera") == -1));
-  var is_ie3    = (is_ie && (is_major < 4));
-  var is_ie4    = (is_ie && (is_major == 4) && (agt.indexOf("msie 4")!=-1) );
-  var is_ie4up  = (is_ie && (is_major >= 4));
-  var is_ie5    = (is_ie && (is_major == 4) && (agt.indexOf("msie 5.0")!=-1) );
-  var is_ie5_5  = (is_ie && (is_major == 4) && (agt.indexOf("msie 5.5") !=-1));
-  var is_ie5up  = (is_ie && !is_ie3 && !is_ie4);
-  var is_ie5_5up =(is_ie && !is_ie3 && !is_ie4 && !is_ie5);
-  var is_ie6    = (is_ie && (is_major == 4) && (agt.indexOf("msie 6.")!=-1) );
-  var is_ie6up  = (is_ie && !is_ie3 && !is_ie4 && !is_ie5 && !is_ie5_5);
-
-  // KNOWN BUG: On AOL4, returns false if IE3 is embedded browser
-  // or if this is the first browser window opened.  Thus the
-  // variables is_aol, is_aol3, and is_aol4 aren't 100% reliable.
-  var is_aol   = (agt.indexOf("aol") != -1);
-  var is_aol3  = (is_aol && is_ie3);
-  var is_aol4  = (is_aol && is_ie4);
-  var is_aol5  = (agt.indexOf("aol 5") != -1);
-  var is_aol6  = (agt.indexOf("aol 6") != -1);
-
-  var is_opera = (agt.indexOf("opera") != -1);
-  var is_opera2 = (agt.indexOf("opera 2") != -1 || agt.indexOf("opera/2") != -1);
-  var is_opera3 = (agt.indexOf("opera 3") != -1 || agt.indexOf("opera/3") != -1);
-  var is_opera4 = (agt.indexOf("opera 4") != -1 || agt.indexOf("opera/4") != -1);
-  var is_opera5 = (agt.indexOf("opera 5") != -1 || agt.indexOf("opera/5") != -1);
-  var is_opera5up = (is_opera && !is_opera2 && !is_opera3 && !is_opera4);
-
-  var is_webtv = (agt.indexOf("webtv") != -1); 
-  var is_TVNavigator = ((agt.indexOf("navio") != -1) || (agt.indexOf("navio_aoltv") != -1)); 
-  var is_AOLTV = is_TVNavigator;
-
-  var is_hotjava = (agt.indexOf("hotjava") != -1);
-  var is_hotjava3 = (is_hotjava && (is_major == 3));
-  var is_hotjava3up = (is_hotjava && (is_major >= 3));
-
-  // STEP THREE: Associate Javascript Version with Browser
-  var is_js;
-  if (is_nav2 || is_ie3) is_js = 1.0;
-  else if (is_nav3) is_js = 1.1;
-  else if (is_opera5up) is_js = 1.3;
-  else if (is_opera) is_js = 1.1;
-  else if ((is_nav4 && (is_minor <= 4.05)) || is_ie4) is_js = 1.2;
-  else if ((is_nav4 && (is_minor > 4.05)) || is_ie5) is_js = 1.3;
-  else if (is_hotjava3up) is_js = 1.4;
-  else if (is_nav6 || is_gecko) is_js = 1.5;
-  // NOTE: In the future, update this code when newer versions of JS
-  // are released. For now, we try to provide some upward compatibility
-  // so that future versions of Nav and IE will show they are at
-  // *least* JS 1.x capable. Always check for JS version compatibility
-  // with > or >=.
-  else if (is_nav6up) is_js = 1.5;
-  // NOTE: ie5up on mac is 1.4
-  else if (is_ie5up) is_js = 1.3
-  // HACK: no idea for other browsers; always check for JS version with > or >=
-  else is_js = 0.0;
-  console.log('JavaScript version:' + is_js);
-  return (is_js) ; 
-})();
-</script>
+<head>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
+<script src='csound_loader.js'></script>
+<script src='sprintf.js'></script>
+<script src='numeric.js'></script>
+<script src="three.js"></script>
+<script src='tinycolor.js'></script>
+<script src='Silencio.js'></script>
+<script src="TrackballControls.js"></script>
+<script src='ChordSpace.js'></script>
+<script src='numeric.js'></script>
+<script src='HarmonyIFS.js'></script>
+<script src="dat.gui.js"></script>
+</head>
+<body>
 <H1>ChordSpace Tests</H1>
-  <script src='./Silencio.js'>
-</script>
-  <script src='./lodash.js'>
-</script>
-  <script src='./sprintf.js'>
-</script>
-  <script src='./ChordSpace.js'>
-  </script>
 <script>
   function wryte(source) {
     document.write('<h3>Source</h3>');
@@ -104,7 +29,6 @@
     document.write('<h2>' + title + '</h2>');
     wryte(source);
   }
-test('Help', 'ChordSpace.help()');
 test('factorial', 'ChordSpace.factorial(8)');
 test('EPSILON', 'ChordSpace.EPSILON');
 test('eq_epsilon', 'ChordSpace.eq_epsilon(1,1.00000000000001)');
@@ -295,6 +219,10 @@ ChordSpace.insert(score, c2, 2, 2);
 ChordSpace.insert(score, c1, 2, 2);
 test('Score.slice', 'score.slice(2, 3)');
 test('ChordSpace.gather',  'ChordSpace.gather(score, 2, 3)');
- 
+let origin = new ChordSpace.Chord([0, 0, 0]);
+let is_opti = origin.iseOPTI()
+let opti_3 = ChordSpace.allOfEquivalenceClass(3, 'OPTI');
+let opti_4 = ChordSpace.allOfEquivalenceClass(4, 'OPTI');
 </script>
+</body>
 </html>
