--- a/silencio/js/ChordSpaceTest.html
+++ b/silencio/js/ChordSpaceTest.html
@@ -43,12 +43,14 @@ v3.iseV();
 let test_chord;
 let test_is_opti;
 test_chord = new ChordSpace.Chord([0, 0, 0]);
-is_opti = test_chord.iseOPTI();
+tis_opti = test_chord.iseOPTTI();
 // Should not pass.
 test_chord = new ChordSpace.Chord([-3, -2, 8]);
-is_opti = test_chord.iseOPTI();
-let opti_3 = ChordSpace.allOfEquivalenceClass(3, 'OPTI');
-let opti_4 = ChordSpace.allOfEquivalenceClass(4, 'OPTI');
+is_opti = test_chord.iseOPTTI();
+test("There should be 19 chords in OPTTI for trichords", '');
+let opti_3 = ChordSpace.allOfEquivalenceClass(3, 'OPTTI');
+test("There should be 29 chords in OPTTI for tetrachords", '');
+let opti_4 = ChordSpace.allOfEquivalenceClass(4, 'OPTTI');
 console.log("EOP OF MINOR TRIADS")
 mt = new ChordSpace.Chord([0, 3, 7]);
 for (i = 0; i < 12; i++) {
