Almost correct iseOPTTI for 4-chords (#142), just one duplicate.

--- a/silencio/js/ChordSpaceTest.html
+++ b/silencio/js/ChordSpaceTest.html
@@ -42,7 +42,7 @@ let v3 = new ChordSpace.Chord([0, 5, 8]);
 v3.iseV();
 let test_chord;
 let test_is_opti;
-test_chord = new ChordSpace.Chord([0, 0, 0]);
+test_chord = new ChordSpace.Chord([-6, -6, 6, 6]);
 tis_opti = test_chord.iseOPTTI();
 // Should not pass.
 test_chord = new ChordSpace.Chord([-3, -2, 8]);
