--- a/silencio/js/ChordSpaceTest.html
+++ b/silencio/js/ChordSpaceTest.html
@@ -33,7 +33,11 @@
     document.write('<h2>' + title + '</h2>');
     wryte(source);
   }
-  
+console.log("This is console.log.");
+console.info("This is console.info.");
+console.warn("This is console.warn.");
+console.error("This is console.error.");
+console.assert(false, "This is console.assert.");
 let v1 = new ChordSpace.Chord([0, 3, 7]);
 v1.iseV()
 let v2 = new ChordSpace.Chord([0, 4, 9]);
@@ -43,14 +47,14 @@ v3.iseV();
 let test_chord;
 let test_is_opti;
 test_chord = new ChordSpace.Chord([-6, -6, 6, 6]);
-tis_opti = test_chord.iseOPTTI();
+is_opti = test_chord.iseOPTTI();
 // Should not pass.
 test_chord = new ChordSpace.Chord([-3, -2, 8]);
 is_opti = test_chord.iseOPTTI();
 test("There should be 19 chords in OPTTI for trichords", '');
 let opti_3 = ChordSpace.allOfEquivalenceClass(3, 'OPTTI');
-test("There should be 29 chords in OPTTI for tetrachords", '');
-let opti_4 = ChordSpace.allOfEquivalenceClass(4, 'OPTTI');
+test("There should be 83 chords in OPTTI for tetrachords", '');
+//let opti_4 = ChordSpace.allOfEquivalenceClass(4, 'OPTTI');
 console.log("EOP OF MINOR TRIADS")
 mt = new ChordSpace.Chord([0, 3, 7]);
 for (i = 0; i < 12; i++) {
