--- a/silencio/js/ChordSpaceTest.html
+++ b/silencio/js/ChordSpaceTest.html
@@ -85,6 +85,12 @@ function list_map(map, title) {
         index++;
     }
 }
+//let opt_4 = ChordSpace.allOfEquivalenceClass(4, 'OPT');
+//list_map(opt_4[0], "representatives_for_indexes")
+//list_map(opt_4[1], "indexes_for_equivalents")
+//list_map(opt_4[2], "unique_representatives")
+//list_map(opt_4[3], "unique_equivalents")
+
 var CM = new ChordSpace.Chord([0, 4, 7]).eOP();
 var CM_reflected = CM.reflect();
 var test_chord = new ChordSpace.Chord();
